[project]
name = "mflux-gallery"
version = "0.1.0"
description = "A FastHTML-based image gallery for viewing generated images"

[project.scripts]
mflux-gallery = "main:main"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["BLE", "E4", "E7", "E9", "F", "I", "ICN", "LOG", "PERF", "W"]
ignore = [
  "F403", # ignore undefined names
  "F405", # ignore star imports
  "F811", # ignore reused get/post definitions
]
